--- a/css/main.scss
+++ b/css/main.scss
@@ -445,6 +445,48 @@ textarea {
         align-items: center;
       }
 
+      .schedule-container {
+        display: inline-block;
+        width: 70%;
+        height: auto;
+        margin-top: 6rem;
+        h3 {
+          font-family: Futura PT;
+          font-weight: 400;
+          color: black;
+          font-size: 1.5rem;
+        }
+      }
+
+      .schedule {
+        list-style: none;
+        display: flex;
+        flex-direction: column;
+
+        .schedule-item {
+          margin: 0.25rem 0;
+          display: flex;
+          flex-direction: row;
+          justify-content: space-between;
+          border-bottom: 1px solid grey;
+          p{
+            display: inline-block ;
+            margin: 0;
+            font-size: 1.25rem;
+          }
+          .item-header{
+            font-family: Futura PT Light;
+          }
+          .item-time{
+            font-family: Futura PT Light;
+          }
+        }
+
+        .schedule-item.gap-item {
+          margin: 1.5rem 0;
+        }
+      }
+
       .speaker-img{
         box-sizing: border-box;
         height: auto;
