--- a/css/main.css
+++ b/css/main.css
@@ -208,6 +208,10 @@ textarea {
   display: none;
 }
 
+#arrowhold {
+  display: none;
+}
+
 @media only screen and (min-width: 600px) {
   /* For tablets: */
   .splash-container {
@@ -342,6 +346,7 @@ textarea {
     grid-column: 3/4;
     grid-row: 2/3;
     align-self: center;
+    display: block;
   }
 
   .arrow-path {
