--- a/css/main.scss
+++ b/css/main.scss
@@ -214,6 +214,10 @@ textarea {
      display: none;
    }
 
+   #arrowhold {
+     display: none;
+   }
+
    @media only screen and (min-width: 600px) {
      /* For tablets: */
      .splash-container {
@@ -352,6 +356,7 @@ textarea {
         grid-column: 3/4;
         grid-row: 2/3;
         align-self: center;
+        display: block;
       }
 
       .arrow-path {
