--- a/css/main.scss
+++ b/css/main.scss
@@ -583,18 +583,18 @@ textarea {
   grid-row: 2/3;
   display: flex;
   width: 100%;
-  height: 60px;
   justify-content: space-between;
   align-self: end;
 }
 
 #mobile-nav a {
-  font-size: 1.25rem;
+  font-size: 1.2rem;
   font-family: Futura PT Light;
   text-transform: lowercase;
   display: block;
   text-decoration: none;
   color: #005EB8;
+  padding: 0.5rem;
 }
 
 #mobile-nav a:hover, #mobile-nav a:focus, #mobile-nav a:active{
