--- a/css/main.css
+++ b/css/main.css
@@ -484,6 +484,7 @@ textarea {
     grid-column: 4/7;
     width: 100%;
     height: 100%;
+    padding: none;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -491,10 +492,11 @@ textarea {
 
   .schedule-container {
     display: inline-block;
-    width: 70%;
+    width: 75%;
     height: auto;
-    margin-top: 6rem;
     border-top: none;
+    align-self: flex-end;
+    padding-bottom: 1rem;
   }
 
   .schedule-container h3 {
