--- a/css/main.css
+++ b/css/main.css
@@ -184,7 +184,7 @@ textarea {
 
 .speaker-list-wrapper .speaker-box {
   display: inline-block;
-  margin-bottom: 0.75rem;
+  margin-right: none;
 }
 
 .speaker-box h2 {
@@ -457,7 +457,7 @@ textarea {
   }
 
   .speakers-container .speaker-box {
-    margin-right: 1.25vw;
+    padding-right: 1.25vw;
     writing-mode: vertical-lr;
     transform: rotate(180deg);
     display: inline-block;
